logVMFailure should not simulate crash on iOS https://bugs.webkit.org/show_bug.cgi?id=180790

Reviewed by JF Bastien.

The Gigacage allocation on iOS is expected to fail in certain circumstances.
Let's not simulate a crash on failure because since this is expected behavior.

* bmalloc/VMAllocate.h:
(bmalloc::tryVMAllocate):


Canonical link: https://commits.webkit.org/196714@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@225912 268f45cc-cd09-0410-ab3c-d52691b4dbfc