Source/bmalloc/bmalloc/VMAllocate.h
@@ -122,10 +122,8 @@ inline void* tryVMAllocate(size_t vmSize)
 {
     vmValidate(vmSize);
     void* result = mmap(0, vmSize, PROT_READ | PROT_WRITE, MAP_PRIVATE | MAP_ANON | BMALLOC_NORESERVE, BMALLOC_VM_TAG, 0);
-    if (result == MAP_FAILED) {
-        logVMFailure(vmSize);
+    if (result == MAP_FAILED)
         return nullptr;
-    }
     return result;
 }
 
